# cpp-duck-typing

./: CMakeLists.txt  Dockerfile  README.md
cmake/: ut_helper.cmake
src/: concrete_node.cpp  concrete_node.hpp  main.cpp  node.hpp
src/message/: MessageDef.hpp  MessageHeader.hpp  RawMessage.hpp
src/mock/: MockNodes.cpp  MockNodes.hpp
src/node/: Node.cpp  Node.hpp  SourceNode.hpp
src/util/: Factory.hpp
test/: CMakeLists.txt
test/node/: NodeTestFixture.hpp  NodeTests.cpp
